--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,21 +1,21 @@
 .footer {
-    margin-top: 100px;
-    box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 100px;
+  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .footer__container {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20%;
-    padding: 20px 10px 20px 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20%;
+  padding: 20px 10px 20px 10px;
 }
 
 .footer__logo {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-
 
 .footer__contacts {
   font-family: "Montserrat";
@@ -38,10 +38,17 @@
 }
 
 .footer__links {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    column-gap: 100px;
-    flex-wrap: wrap;
-    max-height: 140px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  column-gap: 10vw;
+  flex-wrap: wrap;
+  max-height: 120px;
+}
+
+@media (max-width:900px) {
+  .footer__links{
+    display: none;
+  }
 }
