--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -39,16 +39,72 @@
   font-size: 16px;
   line-height: 16px;
   color: white;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .btn__header:hover {
-    background: #ff0400;
+  background: #ff0400;
 }
 
+.burger__btn {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  display: none;
+}
 
-@media (max-width:900px) {
-    .header__nav{
-      display: none;
-    }
+.burger__btn span {
+  position: absolute;
+  top: 23px;
+  left: 8px;
+  display: block;
+  height: 3px;
+  width: 30px;
+  background-color: black;
+  cursor: pointer;
+}
+
+.burger__btn span:nth-child(1) {
+  transform: translateY(-10px);
+}
+
+.burger__btn span:nth-child(3) {
+  transform: translateY(10px);
+}
+
+.burger__header {
+  display: flex;
+}
+
+@media (max-width: 900px) {
+  .header__nav {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__logo {
+    display: none;
+  }
+
+  .burger__btn {
+    display: block;
+  }
+
+  .burger__nav {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .nav__item {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 32px;
+  }
 }
