--- a/src/components/UI/burgerMenu/burger.css
+++ b/src/components/UI/burgerMenu/burger.css
@@ -7,10 +7,12 @@
     background-color: #fff;
     z-index: 2;
     transition: .5s;
+    scroll-behavior: smooth;
 }
 
 .burger.active {
     left: 0;
+    position: fixed;
 }
 
 .burger__close-btn {
