--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -4,3 +4,9 @@
     box-shadow: 0px 0px 10px 7px rgba(34, 60, 80, 0.2);
     border-radius: 10px;
 }
+
+@media (max-width:1350px) {
+    .menu__container {
+        display: none;
+    }
+}
