--- a/src/components/catalog/catalog.module.css
+++ b/src/components/catalog/catalog.module.css
@@ -3,3 +3,9 @@
     display: flex;
     gap: 30px;
 }
+
+@media (max-width:1350px) {
+    .catalog__container {
+        flex-direction: column;
+    }
+}
