--- a/src/components/catalogCard/catalogcard.module.css
+++ b/src/components/catalogCard/catalogcard.module.css
@@ -1,7 +1,6 @@
 .card__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     max-width: 300px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
@@ -20,9 +19,9 @@
 }
 
 .card__info {
-    text-align: center;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     top: 200px;
     padding: 5px 10px;
     z-index: 1;
