--- a/src/components/catalogCard/catalogcard.module.css
+++ b/src/components/catalogCard/catalogcard.module.css
@@ -13,20 +13,38 @@
 }
 
 .card__img {
-    width: 300px;
+    max-width: 300px;
     border-radius: 10px;
-    z-index: 0;
 }
 
 .card__info {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    top: 200px;
+    justify-content: space-around;
+    align-items: center;
     padding: 5px 10px;
-    z-index: 1;
     height: 200px;
     border-radius: 10px;
+}
+
+.price {
+    font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: auto;
+  color: black;
+}
+
+.name {
+    font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: auto;
+  color: black;
+  padding: 10px;
+  text-align: center;
 }
 
 
