--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -1,8 +1,7 @@
 .menu__container {
-    width: 300px;
-    height: 850px;
     box-shadow: 0px 0px 10px 7px rgba(34, 60, 80, 0.2);
     border-radius: 10px;
+    padding: 20px;
 }
 
 @media (max-width:1350px) {
