--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -2,11 +2,15 @@
     box-shadow: 0px 0px 10px 7px rgba(34, 60, 80, 0.2);
     border-radius: 10px;
     padding: 20px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
 }
 
 @media (max-width:1350px) {
     .menu__container {
         width: 100%;
         height: 50px;
+        align-items: center;
     }
 }
