--- a/src/components/catalogList/cataloglist.module.css
+++ b/src/components/catalogList/cataloglist.module.css
@@ -1,13 +1,26 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.products {
     max-width: 960px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
+.pagination {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px;
+}
+
 
 @media (max-width:1350px) {
-    .container {
+    .products {
         justify-content: center;
     }
 }
