--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -1,16 +1,45 @@
 .menu__container {
-    box-shadow: 0px 0px 10px 7px rgba(34, 60, 80, 0.2);
-    border-radius: 10px;
-    padding: 20px;
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
+  box-shadow: 0px 0px 10px 7px rgba(34, 60, 80, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
-@media (max-width:1350px) {
-    .menu__container {
-        width: 100%;
-        height: 50px;
-        align-items: center;
-    }
+.price {
+  width: 150px;
+}
+
+.btn {
+  padding: 10px;
+  background-color: #ff0400;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 16px;
+  color: #ffffff;
+  transition: 0.5s;
+  border-radius: 5px;
+  display: none;
+}
+
+.btn.active {
+    display: block;
+}
+
+.btn:hover{
+    background-color: #A993FF;
+}
+
+
+
+@media (max-width: 1350px) {
+  .menu__container {
+    width: 100%;
+    height: 50px;
+    align-items: center;
+  }
 }
