--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -9,7 +9,8 @@
 }
 
 .price {
-  width: 150px;
+  max-width: 150px;
+  
 }
 
 .btn {
@@ -41,5 +42,11 @@
     width: 100%;
     height: 50px;
     align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  
+  .price {
+    overflow-y: hidden;
   }
 }
