--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -5,7 +5,7 @@
   display: flex;
   gap: 20px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .price {
@@ -35,6 +35,11 @@
     background-color: #A993FF;
 }
 
+
+.checkbox__brands {
+  max-height: 300px;
+  overflow-y: scroll;
+}
 
 
 @media (max-width: 1350px) {
