--- a/src/components/catalogList/cataloglist.module.css
+++ b/src/components/catalogList/cataloglist.module.css
@@ -13,7 +13,8 @@
 
 .pagination {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    gap: 20px;
     width: 100%;
     padding: 10px;
 }
