--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -37,11 +37,16 @@
 
 
 .checkbox__brands {
-  max-height: 300px;
+  max-height: 120px;
+  width: 125px;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  padding: 0 10px 10px 10px;
   gap: 10px;
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  border-radius: 5px;
 }
 
 
