add adaptive for filter catalog

--- a/src/components/catalogMenu/catalogmenu.module.css
+++ b/src/components/catalogMenu/catalogmenu.module.css
@@ -41,6 +41,7 @@
 
 @media (max-width: 1350px) {
   .menu__container {
+    display: none;
     width: 100%;
     height: 50px;
     align-items: center;
