--- a/src/components/catalogList/cataloglist.module.css
+++ b/src/components/catalogList/cataloglist.module.css
@@ -50,4 +50,8 @@
     .products {
         justify-content: center;
     }
+    
+    .pagination {
+        justify-content: space-around;
+    }
 }
