--- a/src/components/SortBrand/sortbrand.module.css
+++ b/src/components/SortBrand/sortbrand.module.css
@@ -12,8 +12,21 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0 10px 10px 10px;
+    padding: 10px;
     gap: 10px;
     box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
     border-radius: 5px;
+  }
+
+  .checkbox__brands::-webkit-scrollbar {
+    width: 14px;
+  }
+  
+  
+  
+  .checkbox__brands::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9px;
+  background-color: #AAAAAA;
   }
