--- a/src/components/SortSize/sortsize.module.css
+++ b/src/components/SortSize/sortsize.module.css
@@ -1,12 +1,24 @@
-.checkbox__brands {
-    max-height: 120px;
-    width: 125px;
-    overflow-y: scroll;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 0 10px 10px 10px;
-    gap: 10px;
-    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    border-radius: 5px;
-  }
+.checkbox__size {
+  max-height: 120px;
+  width: 125px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 10px;
+  gap: 10px;
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  border-radius: 5px;
+}
+
+.checkbox__size::-webkit-scrollbar {
+  width: 14px;
+}
+
+
+.checkbox__size::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9px;
+  background-color: #AAAAAA;
+}
