--- a/src/components/catalogCard/catalogcard.module.css
+++ b/src/components/catalogCard/catalogcard.module.css
@@ -14,6 +14,8 @@
 
 .card__img {
     max-width: 300px;
+    height: 370px;
+    object-fit: contain;
     border-radius: 10px;
 }
 
@@ -47,5 +49,7 @@
   text-align: center;
 }
 
-
+.dots button{
+    background: black !important;
+}
 
